# games-rs

./: Cargo.toml  README.md
.github/workflows/: rust.yml
macros/: Cargo.toml  lib.rs
macros/enums/: Cargo.toml  lib.rs
src/: cards.rs  connect_four.rs  lib.rs  rummy.rs  ultimate_ttt.rs
src/agents/: mod.rs  monte_carlo_graph.rs  train.rs
src/agents/scorer/: mod.rs  naive_scorer.rs  neural_net_scorer.rs
src/algorithms/: mod.rs  monte_carlo_graph.rs
src/common/: array.rs  defaults.rs  filesystem.rs  mod.rs
src/connect_four/: board.rs  mod.rs
src/connect_four/agents/: mcgs_agent.rs  mod.rs  player_agent.rs  random_agent.rs
src/ultimate_ttt/: board.rs  mod.rs
src/ultimate_ttt/agents/: mod.rs  player_agent.rs  random_agent.rs
