[package]
name = "games-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["macros"]
resolver = "2"

[dependencies]
macros = { path = "macros" }
bincode = { version = "2.0.1", features = ["serde"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
petgraph = { version = "0.8.3", features = ["serde-1"] }
indicatif = "0.18.3"
clap = { version = "4.5.53", features = ["derive"] }
