[package]
name = "games-rs"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["macros"]
resolver = "2"

[dependencies]
macros = { path = "macros" }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
petgraph = { version = "0.8.3", features = ["serde-1"] }
indicatif = "0.18.3"
clap = { version = "4.5.53", features = ["derive"] }
burn = "0.19.1"
derive_aliases = "0.4.7"
bitcode = { version = "0.6.9", features = ["serde"] }
tinyvec = { version = "1.10.0", features = ["serde"] }
rayon = "1.11.0"
